applied mx-auto to all main containers

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
     </nav>
 
-    <main class="container-fluid flex-fill bg-white mt-3 ml-4 w-50 float-left" id="page-content">
+    <main class="container-fluid flex-fill bg-white mt-3 w-75 mx-auto" id="page-content">
         <article class="row">
             <section class="col-lg-12">
                 <h1>About Me</h1>
