--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
             </ul>
         </div>
     </nav>
-    <main class="container-fluid page-content flex-fill bg-white mt-3 ml-4 w-75 float-left" id="page-content">
+    <main class="container-fluid page-content flex-fill bg-white mt-3 mx-auto w-75 float-left" id="page-content">
         <h1>Portfolio</h1>
         <hr>
         <div class="row">
@@ -49,7 +49,7 @@
                     </div>
                 </div>
                 <div class="image mb-3">
-                    <img class=" img-fluid" src="./Assets/Images/Cooking-200x200.jpg" alt="Cooking">
+                    <img class="img-fluid" src="./Assets/Images/Cooking-200x200.jpg" alt="Cooking">
                     <div class="text">
                         Cooking
                     </div>
