--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
             </ul>
         </div>
     </nav>
-    <main class="container-fluid flex-fill bg-white mt-3 ml-4 w-75" id="page-content">
+    <main class="container-fluid flex-fill bg-white mt-3 mx-auto w-75" id="page-content">
 
         <form class="mt-3 ml-3">
             <h1>Contact</h1>
