--- a/portfolio.html
+++ b/portfolio.html
@@ -41,8 +41,8 @@
         <h1>Portfolio</h1>
         <hr>
         <div class="row">
-            <div class="col-xl-6 col-lg-8 col-md-10">
-                <div class="image mb-3 mr-2">
+            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
+                <div class="image mb-3">
                     <img class="img-fluid" src="./Assets/Images/catan-200x200.jpg" alt="Settlers of Catan">
                     <div class="text">
                         Board Games
@@ -54,30 +54,27 @@
                         Cooking
                     </div>
                 </div>
-            </div>
-        </div>
 
-        <div class="row">
-            <div class="col-xl-6 col-lg-8 col-md-10">
-                <div class="image mb-3 mr-2">
+                <div class="image mb-3">
                     <img class=" img-fluid" src="./Assets/Images/gardening-200x200.jpg" alt="Gardening">
                     <div class="text">
                         Gardening
                     </div>
                 </div>
+            </div>
+
+            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
+
                 <div class="image mb-3">
                     <img class=" img-fluid" src="./Assets/Images/hiking-200x200.jpg" alt="Hiking">
                     <div class="text">
                         Hiking
                     </div>
                 </div>
-            </div>
-        </div>
 
-        <div class="row">
-            <div class="col-xl-6 col-lg-8 col-md-10">
-                <div class="image mb-3 mr-2">
-                    <img class="img-fluid" src="./Assets/Images/ice-cream-200x200.jpg" alt="ice-cream-200x200">
+
+                <div class="image mb-3">
+                    <img class="img-fluid" src="./Assets/Images/ice-cream-200x200.jpg" alt="ice cream">
                     <div class="text">
                         Ice Cream
                     </div>
@@ -89,7 +86,6 @@
                     </div>
                 </div>
             </div>
-        </div>
     </main>
 
     <footer id="sticky-footer" class="py-4 bg-info text-white-50">
