updated portfolio page images and added links to real projects

--- a/portfolio.html
+++ b/portfolio.html
@@ -43,22 +43,22 @@
         <div class="row">
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
                 <div class="image mb-3">
-                    <img class="img-fluid" src="./Assets/Images/catan-200x200.jpg" alt="Settlers of Catan">
+                    <img class="img-fluid" src="./Assets/Images/password-200x200.png" alt="Password Generator">
                     <div class="text">
-                        Board Games
+                        <a href="https://github.com/emmbra/homeworkWeek3">Password Generator</a>
                     </div>
                 </div>
                 <div class="image mb-3">
-                    <img class="img-fluid" src="./Assets/Images/Cooking-200x200.jpg" alt="Cooking">
+                    <img class="img-fluid" src="./Assets/Images/quiz-200x200.jfif" alt="Coding Quiz">
                     <div class="text">
-                        Cooking
+                        <a href="https://github.com/emmbra/homeworkWeek4">Coding Quiz</a>
                     </div>
                 </div>
 
                 <div class="image mb-3">
-                    <img class=" img-fluid" src="./Assets/Images/gardening-200x200.jpg" alt="Gardening">
+                    <img class=" img-fluid" src="./Assets/Images/calendar-200x200.png" alt="Day Planner">
                     <div class="text">
-                        Gardening
+                        <a href="https://github.com/emmbra/homeworkWeek5">Day Planner</a>
                     </div>
                 </div>
             </div>
@@ -66,23 +66,24 @@
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
 
                 <div class="image mb-3">
-                    <img class=" img-fluid" src="./Assets/Images/hiking-200x200.jpg" alt="Hiking">
+                    <img class=" img-fluid" src="./Assets/Images/weather-200x200.png" alt="Weather Dashboard">
                     <div class="text">
-                        Hiking
+                        <a href="https://github.com/emmbra/homeworkWeek6">Weather Dashboard</a>
                     </div>
                 </div>
 
 
                 <div class="image mb-3">
-                    <img class="img-fluid" src="./Assets/Images/ice-cream-200x200.jpg" alt="ice cream">
+                    <img class="img-fluid" src="./Assets/Images/run-200x200.png" alt="Trail Run App">
                     <div class="text">
-                        Ice Cream
+                        <a href="https://github.com/emmbra/project1">Trail Run App</a>
                     </div>
                 </div>
+
                 <div class="image mb-3">
-                    <img class=" img-fluid" src="./Assets/Images/Poodle-200x200.jpg" alt="Poodles">
+                    <img class=" img-fluid" src="./Assets/Images/linkedin-200x200.png" alt="LinkedIn">
                     <div class="text">
-                        Poodles
+                        <a href="https://www.linkedin.com/in/emmett-brady-87a96894/">LinkedIn</a>
                     </div>
                 </div>
             </div>
