updated portfolio page with more projects

--- a/portfolio.html
+++ b/portfolio.html
@@ -61,6 +61,27 @@
                         <a href="https://github.com/emmbra/homeworkWeek5">Day Planner</a>
                     </div>
                 </div>
+
+                <div class="image mb-3">
+                    <img class=" img-fluid" src="./Assets/Images/readme-200x200.png" alt="README Generator">
+                    <div class="text">
+                        <a href="https://github.com/emmbra/homeworkWeek9">README Generator</a>
+                    </div>
+                </div>
+
+                <div class="image mb-3">
+                    <img class=" img-fluid" src="./Assets/Images/template-200x200.png" alt="Employee Template Engine">
+                    <div class="text">
+                        <a href="https://github.com/emmbra/homeworkWeek10">Employee Template Engine</a>
+                    </div>
+                </div>
+
+                <div class="image mb-3">
+                    <img class=" img-fluid" src="./Assets/Images/notetaker-200x200.png" alt="Express Note Taker">
+                    <div class="text">
+                        <a href="https://github.com/emmbra/homeworkWeek11">Express Note Taker</a>
+                    </div>
+                </div>
             </div>
 
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
@@ -77,6 +98,21 @@
                     <img class="img-fluid" src="./Assets/Images/run-200x200.png" alt="Trail Run App">
                     <div class="text">
                         <a href="https://github.com/emmbra/project1">Trail Run App</a>
+                    </div>
+                </div>
+
+                <div class="image mb-3">
+                    <img class=" img-fluid" src="./Assets/Images/employeetracker-200x200.png" alt="MySQL Employee Tracker">
+                    <div class="text">
+                        <a href="https://github.com/emmbra/homeworkWeek12">MySQL Employee Tracker</a>
+                    </div>
+                </div>
+
+
+                <div class="image mb-3">
+                    <img class="img-fluid" src="./Assets/Images/lemon-200x200.jpg" alt="Fresh Lemons">
+                    <div class="text">
+                        <a href="https://github.com/emmbra/project2">Fresh Lemons: Movie Rating App</a>
                     </div>
                 </div>
 
